jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;

DllImport int ECF_Consumidor_GetNome(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_SetEnviado(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_Zera(const INTPTR ecfHandle);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_CortaPapel(const INTPTR ecfHandle, const BOOL corteParcial);

DllImport int ECF_Create(INTPTR* ecfHandle);

DllImport int ECF_DadosReducaoZClass_CalculaValoresVirtuais(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetAcrescimoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetAcrescimoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetAcrescimoOPNF(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCancelamentoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCancelamentoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCancelamentoOPNF(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCCDC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCCF(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCDC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCFC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCFD(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCNF(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetCNFCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCOO(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCRO(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCRZ(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetDataDaImpressora(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDataDoMovimento(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDescontoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDescontoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDescontoOPNF(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetFPG(const INTPTR ecfHandle, FormaPagamentoRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetFPGCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetGNF(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetGNFC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetGRG(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetICMS(const INTPTR ecfHandle, AliquotaRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetICMSCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetIsentoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetIsentoISSQN(const INTPTR ecfHandle, double* value);