jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java


	/**
	 * Original signature : <code>int ECF_Consumidor_GetNome(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 148</i>
	 */
	int ECF_Consumidor_GetNome(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_Consumidor_SetEnviado(const INTPTR, const BOOL)</code><br>
	 * <i>native declaration : line 149</i>
	 */
	int ECF_Consumidor_SetEnviado(int ecfHandle, boolean value);
	/**
	 * Original signature : <code>int ECF_Consumidor_Zera(const INTPTR)</code><br>
	 * <i>native declaration : line 150</i>
	 */
	int ECF_Consumidor_Zera(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CorrigeEstadoErro(const INTPTR, const BOOL)</code><br>
	 * <i>native declaration : line 151</i>
	 */
	int ECF_CorrigeEstadoErro(int ecfHandle, boolean reducaoZ);
	/**
	 * Original signature : <code>int ECF_CortaPapel(const INTPTR, const BOOL)</code><br>
	 * <i>native declaration : line 152</i>
	 */
	int ECF_CortaPapel(int ecfHandle, boolean corteParcial);
	/**
	 * Original signature : <code>int ECF_Create(INTPTR*)</code><br>
	 * <i>native declaration : line 153</i>
	 */
	int ECF_Create(IntByReference ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_CalculaValoresVirtuais(const INTPTR)</code><br>
	 * <i>native declaration : line 154</i>
	 */
	int ECF_DadosReducaoZClass_CalculaValoresVirtuais(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetAcrescimoICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 155</i><br>
	 */
	int ECF_DadosReducaoZClass_GetAcrescimoICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetAcrescimoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 156</i><br>
	 */
	int ECF_DadosReducaoZClass_GetAcrescimoISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetAcrescimoOPNF(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 157</i><br>
	 */
	int ECF_DadosReducaoZClass_GetAcrescimoOPNF(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCancelamentoICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 158</i><br>
	 */
	int ECF_DadosReducaoZClass_GetCancelamentoICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCancelamentoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 159</i><br>
	 */
	int ECF_DadosReducaoZClass_GetCancelamentoISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCancelamentoOPNF(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 160</i><br>
	 */
	int ECF_DadosReducaoZClass_GetCancelamentoOPNF(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCCDC(const INTPTR)</code><br>
	 * <i>native declaration : line 161</i>
	 */
	int ECF_DadosReducaoZClass_GetCCDC(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCCF(const INTPTR)</code><br>
	 * <i>native declaration : line 162</i>
	 */
	int ECF_DadosReducaoZClass_GetCCF(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCDC(const INTPTR)</code><br>
	 * <i>native declaration : line 163</i>
	 */
	int ECF_DadosReducaoZClass_GetCDC(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCFC(const INTPTR)</code><br>
	 * <i>native declaration : line 164</i>
	 */
	int ECF_DadosReducaoZClass_GetCFC(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCFD(const INTPTR)</code><br>
	 * <i>native declaration : line 165</i>
	 */
	int ECF_DadosReducaoZClass_GetCFD(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCNF(const INTPTR, ComprovanteNaoFiscalRec*, const int)</code><br>
	 * <i>native declaration : line 166</i>
	 */
	int ECF_DadosReducaoZClass_GetCNF(int ecfHandle, ComprovanteNaoFiscalRec record, int value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCNFCount(const INTPTR)</code><br>
	 * <i>native declaration : line 167</i>
	 */
	int ECF_DadosReducaoZClass_GetCNFCount(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCOO(const INTPTR)</code><br>
	 * <i>native declaration : line 168</i>
	 */
	int ECF_DadosReducaoZClass_GetCOO(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCRO(const INTPTR)</code><br>
	 * <i>native declaration : line 169</i>
	 */
	int ECF_DadosReducaoZClass_GetCRO(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetCRZ(const INTPTR)</code><br>
	 * <i>native declaration : line 170</i>
	 */
	int ECF_DadosReducaoZClass_GetCRZ(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetDataDaImpressora(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 171</i><br>
	 */
	int ECF_DadosReducaoZClass_GetDataDaImpressora(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetDataDoMovimento(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 172</i><br>
	 */
	int ECF_DadosReducaoZClass_GetDataDoMovimento(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetDescontoICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 173</i><br>
	 */
	int ECF_DadosReducaoZClass_GetDescontoICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetDescontoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 174</i><br>
	 */
	int ECF_DadosReducaoZClass_GetDescontoISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetDescontoOPNF(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 175</i><br>
	 */
	int ECF_DadosReducaoZClass_GetDescontoOPNF(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetFPG(const INTPTR, FormaPagamentoRec*, const int)</code><br>
	 * <i>native declaration : line 176</i>
	 */
	int ECF_DadosReducaoZClass_GetFPG(int ecfHandle, FormaPagamentoRec record, int value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetFPGCount(const INTPTR)</code><br>
	 * <i>native declaration : line 177</i>
	 */
	int ECF_DadosReducaoZClass_GetFPGCount(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetGNF(const INTPTR)</code><br>
	 * <i>native declaration : line 178</i>
	 */
	int ECF_DadosReducaoZClass_GetGNF(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetGNFC(const INTPTR)</code><br>
	 * <i>native declaration : line 179</i>
	 */
	int ECF_DadosReducaoZClass_GetGNFC(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetGRG(const INTPTR)</code><br>
	 * <i>native declaration : line 180</i>
	 */
	int ECF_DadosReducaoZClass_GetGRG(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetICMS(const INTPTR, AliquotaRec*, const int)</code><br>
	 * <i>native declaration : line 181</i>
	 */
	int ECF_DadosReducaoZClass_GetICMS(int ecfHandle, AliquotaRec record, int value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetICMSCount(const INTPTR)</code><br>
	 * <i>native declaration : line 182</i>
	 */
	int ECF_DadosReducaoZClass_GetICMSCount(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetIsentoICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 183</i><br>
	 */
	int ECF_DadosReducaoZClass_GetIsentoICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetIsentoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 184</i><br>
	 */
	int ECF_DadosReducaoZClass_GetIsentoISSQN(int ecfHandle, DoubleByReference value);
